# JucePluginTemplate

./: .gitignore  CMakeLists.txt  README.md
Project/: CMakeLists.txt
Project/inc/: PluginEditor.hpp  PluginProcessor.hpp
Project/src/: PluginEditor.cpp  PluginProcessor.cpp
